--- a/demos/index.css
+++ b/demos/index.css
@@ -1,3 +1,7 @@
+body, html {
+font-family:arial;
+}
+
 #input {
 margin-top:10px;
 }
@@ -7,8 +11,8 @@ margin-top:30px;
 }
 
 #source_container {
-margin-top:30px;
- }
+margin-top:20px;
+}
 
 #source {
 }
@@ -21,4 +25,8 @@ line-height:125%;
 margin:1em 0 0;
 overflow:auto;
 padding:0.99em;
+}
+
+#colorpicker {
+display:none;
 }
